# Escrity-lenguaje

./: CMakeLists.txt  README.md  compile.sh  config.ini  evaluate.h  install.sh  interpret.h
.github/workflows/: build_and_test_linux_arm.yml  compile_and_tes_linux.yml  source_code.yml  test_code.yml  testing.yml
include/: Array.h  array.h  definitions.h  enum.h  enums.h  error.h  errors.h  evaluate.h  function.h  interpret.h  object.h  properties.h  protocol.h  str.h  token.h  variable.h
src/: array.c  enum.c  enums.c  error.c  errors.c  evaluator.c  function.c  interpret.c  main.c  main.ty  object.c  properties.c  protocol.c  str.c  tokenizer.c  variable.c
src/include/: tokens.h
